# trading

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users.py  0002_exchange_accounts.py  0003_market_data.py  0004_strategies.py  0005_risk.py  0006_orders.py  0007_backtests.py  0008_notifications.py  0009_audit.py
backend/app/: __init__.py  main.py
backend/app/alerts/: channels.py  rules.py  service.py
backend/app/analytics/: service.py
backend/app/api/: account.py  alerts.py  analytics.py  audit.py  auth.py  backtests.py  deps.py  exchanges.py  health.py  markets.py  orders.py  portfolio.py  risk.py  routing.py  strategies.py
backend/app/audit/: service.py
backend/app/backtest/: engine.py  exchange.py  metrics.py  montecarlo.py  report.py  run.py  walkforward.py
backend/app/core/: config.py  crypto.py  logging.py  metrics.py  security.py
backend/app/db/: models.py  session.py
backend/app/exchanges/: base.py  ccxt_adapter.py  errors.py  paper.py  permissions.py  rate_limiter.py  registry.py  service.py
backend/app/execution/: bracket.py  errors.py  factory.py  liquidation.py  paper_executor.py  router.py  slippage.py  smart_routing.py
backend/app/market_data/: fetcher.py  gaps.py  normalizer.py  pubsub.py  service.py  stream.py  timeframes.py
backend/app/portfolio/: correlation.py  service.py  valuation.py
backend/app/risk/: checks.py  config.py  kill_switch.py  manager.py  service.py  sizing.py
backend/tests/: conftest.py  test_alert_channels.py  test_alert_rules.py  test_alerts_api.py  test_analytics_api.py  test_audit_api.py  test_audit_service.py  test_auth.py  test_backtest_engine.py  test_backtest_exchange.py  test_backtest_metrics.py  test_backtest_report.py  test_backtests_api.py  test_bracket.py  test_correlation_matrix.py  test_crypto.py  test_exchanges_api.py  test_fetcher.py  test_gaps.py  test_health.py  test_indicators.py  test_kill_switch.py  test_liquidation.py  test_ma_crossover.py  test_markets_api.py  test_metrics.py  test_montecarlo.py  test_normalizer.py  test_orders_api.py  test_paper_exchange.py  test_paper_executor.py  test_permissions.py  test_portfolio_api.py  test_rate_limiter.py  test_risk_api.py  test_risk_checks.py  test_router.py  test_routing_api.py  test_run_backtest.py  test_runner.py  (+11 more)
(+51 files in other folders)
