[project]
name = "trading-bot-backend"
version = "0.1.0"
description = "Autonomous trading bot platform - backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "redis>=5.0",
    "structlog>=24.1",
    "httpx>=0.27",
    "argon2-cffi>=23.1",
    "pyjwt>=2.8",
    "pyotp>=2.9",
    "email-validator>=2.1",
    "cryptography>=42.0",
    "ccxt>=4.3",
    "websockets>=12.0",
    "celery[redis]>=5.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "black>=24.4",
    "aiosqlite>=0.20",
    "hypothesis>=6.100",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
# B008: FastAPI uses `Depends(...)` in argument defaults by design.
# E741: `l` is the standard OHLCV field name for "low".
ignore = ["B008", "E741"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
